corrects headers on mobile

--- a/styles.css
+++ b/styles.css
@@ -41,12 +41,11 @@ img {
     text-align: center;
     margin-top: 20px;
     padding: 20px;
-    /* width: 290px; */
-    max-width: 70vw;
+    max-width: 90vw;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    font-size: smaller;
+    font-size: 105%;
 }
 
 .links {
